test: getFirst 호출로 변경